# Style05

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md
project/global-stock-signal-engine/internal/: .env.example  README.md  docker-compose.yml  package.json  pyproject.toml
project/global-stock-signal-engine/internal/backend/app/: __init__.py  config.py  main.py  sample_data.py
project/global-stock-signal-engine/internal/backend/tests/: test_scoring_engine.py
project/global-stock-signal-engine/internal/docs/: api-contracts.md  architecture.md  backtest-engine-design.md  backtest-rules.md  collector-interface.md  data-sources.md  db-schema.md  design-goal-prompt.md  development-order.md  feature-generation-design.md  frontend-design-boundary.md  input-output-contracts.md  legal-notes.md  model-audit.md  module-boundaries.md  mvp-scope.md  news-event-taxonomy.md  product-spec.md  risk-policy.md  risks-and-mitigations.md  router-design.md  score-function-design.md  scoring-policy.md  test-strategy.md  ui-spec.md
project/global-stock-signal-engine/internal/frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
project/global-stock-signal-engine/internal/frontend/.next/: next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  routes-manifest.json  trace
project/global-stock-signal-engine/internal/frontend/app/: globals.css  layout.tsx
project/global-stock-signal-engine/internal/frontend/components/: ConfidenceBadge.tsx  FilterBar.tsx  MarketRegimePanel.tsx  ModelAuditPanel.tsx  PriceVolumeChart.tsx  (+5 more)
(+158 files in other folders)
